Add email verification, fix template

--- a/src/email-password/email-templates/email-confirm.html
+++ b/src/email-password/email-templates/email-confirm.html
@@ -6,14 +6,13 @@
   </p>
 
   <p style="margin:1em 0">
-    <p>Thank you for your interests in Platonos.</p>
+    <p>Thank you for your interest in Platonos.</p>
     <p>Please confirm your email address by clicking on the link below:</p>
   </p>
-  <a style="margin:1em 0" href="https://www.platonos.com">
-    https://www.platonos.com
+  <a style="margin:1em 0" href="https://www.platonos.com/verify/%recipient.verificationCode%">
+    https://www.platonos.com/verify/%recipient.verificationCode%
   </a>
   <p style="margin:1em 0">
     Platonos team
   </p>
 </div>
-  
