Change email, fix div

--- a/src/email-password/email-templates/email-confirm.html
+++ b/src/email-password/email-templates/email-confirm.html
@@ -4,11 +4,10 @@
   <p style="margin:1em 0">
     Hi %recipient.username%,
   </p>
-
-  <p style="margin:1em 0">
+  <div style="margin:1em 0">
     <p>Thank you for your interest in Platonos.</p>
     <p>Please confirm your email address by clicking on the link below:</p>
-  </p>
+  </div>
   <a style="margin:1em 0" href="https://www.platonos.com/verify/%recipient.verificationCode%">
     https://www.platonos.com/verify/%recipient.verificationCode%
   </a>
